# NCHSB

./: .gitignore  INSTALL_APT_PACKAGES.txt  PROJECT_DESCRIPTION.txt  README.md  build_logs.tex  changelog.tex  da3_costmap_changelog.tex  depth_trial_metrics.csv  launch_all.sh  launch_multi_terminal.sh  ros2_command_log.md  trial_metrics.csv
docs/: ACKERMANN_MODEL.md  ARCHITECTURE.md  INSTALLATION.md  gazebo_depth_sim_build_log.md  progress.tex
jetson_deploy/: README.md  build_onnxruntime_gpu.sh  perception.launch.py  setup_jetson.sh  yolo_node.py
presentations/: EKF_Architecture_Simple.pptx  EKF_IMU_Odometry_Fusion.pptx
racing_line_tools/: AGGRESSIVE_RACING_LINE_GUIDE.md  collision_check.py  csv_to_yaml.py  extract_proper_centerline.py  f1_racing_line.yaml  final_racing_line.yaml  fix_centerline.py  generate_complete_racing_line.sh  generate_proper_centerline.py  generate_racing_line_auto.py  generate_racing_line_manual.py  initial_racing_line.yaml  make_dense_centerline.py  qp_smooth_path.py  requirements.txt  smoothed_racing_line.yaml  true_f1_optimizer.py  visualize_racing_line.py
rc_hardware_bringup/: CMakeLists.txt  README.md  package.xml
rc_hardware_bringup/config/: ekf_hardware.yaml  nav2_da3_costmap.yaml  nav2_da3_only.yaml  nav2_hardware.yaml  nav2_lidar_sensor_depth.yaml  nav2_lilocbench_base.yaml  slam_hardware.yaml  slam_lilocbench.yaml  slam_lilocbench_localization.yaml  slam_localization_hardware.yaml  teensy_bridge.yaml
rc_hardware_bringup/launch/: costmap_ablation.launch.py  da3_costmap.launch.py  hardware_bringup.launch.py  lilocbench_ablation.launch.py  lilocbench_mapping.launch.py  mapping_replay.launch.py  navigation_bringup.launch.py  sensors_bringup.launch.py  teleop_hardware.launch.py
rc_hardware_bringup/params/: vehicle.ini
rc_hardware_bringup/rc_hardware_bringup/: costmap_evaluator.py  da3_inference_node.py  da3_to_pointcloud.py  db3_replayer.py  depth_fusion.py  dynamic_inflation.py  lilocbench_replayer.py  mcap_replayer.py  pose_logger.py  teensy_bridge.py  yolo_node.py
rc_hardware_bringup/scripts/: eval_localization.py  map_corridor_172822.sh  run_ablation.sh  run_ablation_172822.sh  run_corridor_ablation_db3.sh  run_lilocbench_ablation.sh  run_lilocbench_benchmark.sh
rc_hardware_bringup/urdf/: rc_model_hardware.urdf.xacro  rc_model_lilocbench.urdf.xacro  rc_model_replay.urdf.xacro
results/: record_and_plot.py
scripts/: phase0_analyze_scan.py  phase0_lidar_spike_test.sh
src/corridor_social_nav/: CMakeLists.txt  package.xml  plugin_description.xml
src/corridor_social_nav/include/corridor_social_nav/: corridor_frame.hpp  predictive_social_layer.hpp  safety_shield_cbf.hpp  social_layer.hpp
src/corridor_social_nav/msg/: TrackedPeople.msg  TrackedPerson.msg
src/corridor_social_nav/src/: corridor_frame.cpp  predictive_social_layer.cpp  safety_shield_cbf.cpp  safety_shield_node.cpp  social_layer.cpp
src/corridor_social_nav/test/: test_corridor_frame.cpp  test_safety_shield_cbf.cpp  test_social_costmap_math.cpp
src/corridor_social_nav_bringup/: package.xml  setup.cfg  setup.py
src/corridor_social_nav_bringup/corridor_social_nav_bringup/: cmd_vel_logger.py  goal_sender.py  gt_collision_detector.py  gt_people_publisher.py  metrics_logger.py  pedestrian_driver.py  scenario_loader.py
src/corridor_social_nav_bringup/launch/: sim_experiment.launch.py
src/corridor_social_nav_bringup/scenarios/: bidirectional.yaml  doorway_popout.yaml  head_on_group.yaml  head_on_single.yaml  junction_crossing.yaml  overtaking.yaml
src/corridor_social_nav_bringup/scripts/: analyze_results.py  plot_results.py  run_all_experiments.sh  run_experiment.py
src/corridor_social_nav_bringup/test/: test_metrics_computation.py  test_scenario_loader.py
src/rc_model_description/: CMakeLists.txt  package.xml
src/rc_model_description/config/: controllers.yaml  ekf_imu_odom.yaml  mapper_params_localization.yaml  mapper_params_online_async.yaml  nav2_full.yaml  nav2_mppi_depth_sim.yaml  nav2_mppi_social_instant.yaml  nav2_mppi_social_pred.yaml  nav2_mppi_vanilla.yaml  nav2_params_rc.yaml  nav2_racing_planner.yaml
src/rc_model_description/config/nav2_params/: nav2_narrow_cor_5mps
src/rc_model_description/launch/: fortress_bringup.launch.py  sim_depth_experiment.launch.py
src/rc_model_description/maps/: 20mps_corridor.pgm  20mps_corridor.yaml  clean_narrow_corridor.py  corridor_doorway.pgm  corridor_doorway.yaml  corridor_loop.pgm  corridor_loop.yaml  corridor_lturn.pgm  corridor_lturn.yaml  corridor_narrow.pgm  corridor_narrow.yaml  corridor_narrow_furnished.yaml  corridor_straight.pgm  corridor_straight.yaml  corridor_tjunction.pgm  corridor_tjunction.yaml  final_racing_line.yaml  narrow_corridor.pgm  narrow_corridor.yaml  narrow_corridor_clean.pgm
src/rc_model_description/maps/hospital_map/: hospital_corridor_V1.pgm  hospital_corridor_V1.yaml
src/rc_model_description/models/pedestrian/: model.sdf
src/rc_model_description/rviz/: paper_fig3.rviz  urdf.rviz
src/rc_model_description/scripts/: depth_error_injector.py  run_depth_error_trials.py
src/rc_model_description/urdf/: gazebo_control.xacro  joints.xacro  links.xacro
src/rc_model_description/worlds/: corridor.world  corridor_doorway.sdf  corridor_loop.sdf  corridor_lturn.sdf  corridor_narrow.sdf  corridor_narrow_furnished.sdf  corridor_straight.sdf  corridor_tjunction.sdf  lidar_actor_spike_test.world  my_world.world  my_world_hex.world  track_30mps.world
src/rc_nav_bridge/: setup.py
src/rc_racing_planner/: CMakeLists.txt  package.xml  racing_line_planner_plugin.xml
src/rc_racing_planner/include/rc_racing_planner/: racing_line_planner.hpp
src/rc_racing_planner/src/: racing_line_planner.cpp
