<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>corridor_social_nav_bringup</name>
  <version>0.1.0</version>
  <description>
    Launch files, scenario definitions, experiment runner, and analysis
    scripts for corridor social navigation experiments.
  </description>
  <maintainer email="nishant@nyu.edu">Nishant</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>corridor_social_nav</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rc_model_description</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
